Bug 406373 - Canvas not accepting input when the left/top resize buttons are visible
Summary: Canvas not accepting input when the left/top resize buttons are visible
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-09 17:43 UTC by Alvin Wong
Modified: 2019-05-17 08:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2019-04-09 17:43:51 UTC
SUMMARY

The canvas does not accept mouse/tablet input when the canvas is scrolled to the left/top edge such that the left/top canvas resize buttons are visible.

STEPS TO REPRODUCE

1. Create document.
2. Scroll to left/top (i.e. move canvas to right/bottom edge) until the arrow appears.
3. Hover mouse/table on canvas and try to paint.


OBSERVED RESULT

Brush outline is not visible and painting is not possible.


EXPECTED RESULT

Brush outline should be visible and painting should be possible.


SOFTWARE/OS VERSIONS
Windows: 10


ADDITIONAL INFORMATION

Happens on both master and 4.1.7
Comment 1 M 2019-04-09 18:43:42 UTC
It happens for me with 4.1.8 and the pre-alpha on Linux, by dragging the canvas scroll bars left or up until the resize indicator appears. This works with mouse/touchpad as well as tablet pen input.

Krita
  Version: 4.1.8

Qt
  Version (compiled): 5.12.2
  Version (loaded): 5.12.2

OS Information
  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.0.7-1-MANJARO
  Pretty Productname: Manjaro Linux
Comment 2 vanyossi 2019-04-10 17:00:04 UTC
tested on macOS
4.1.7 and master

This only happens using the scrollbars. Use the scrollbar until the resize canvas decoration appears. Draggin or suing the arrows in sliders make no difference

Somehow the event of the decoration appearing while scrolling causes a signal to get lost or not emmited. All singals on canvas get ignored, panning, zooming with keyboard, or painting gets blocked.

Touchpad events remain intact but painting is not possible until the cursor leaves the canvas and reenters. If the resize decoration is visible re-entering canvas does not regain painting funcionality.
Comment 3 vanyossi 2019-05-17 05:49:51 UTC
Git commit b4b57a286845b7eec49e82083eeb48f9b2a55e34 by Ivan Yossi.
Committed on 17/05/2019 at 05:48.
Pushed by ivany into branch 'master'.

Fix: Canvas not accepting input on infinity grow mode.

Calculate cursor position correctly on Enter in infinity mode.

M  +9    -2    libs/ui/canvas/kis_infinity_manager.cpp

https://invent.kde.org/kde/krita/commit/b4b57a286845b7eec49e82083eeb48f9b2a55e34
Comment 4 Halla Rempt 2019-05-17 08:13:03 UTC
Git commit fbb77dd6d7d57d1171c6de486dcfdf22bc8634a2 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 17/05/2019 at 08:12.
Pushed by rempt into branch 'krita/4.2'.

Fix: Canvas not accepting input on infinity grow mode.

Calculate cursor position correctly on Enter in infinity mode.

M  +9    -2    libs/ui/canvas/kis_infinity_manager.cpp

https://invent.kde.org/kde/krita/commit/fbb77dd6d7d57d1171c6de486dcfdf22bc8634a2