Fix: Canvas not accepting input on infinity grow mode.

Calculate cursor position correctly on Enter in infinity mode.

BUG:406373